--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.flyway.baseline-on-migrate=true
 #configurações para mostrar e formatar os comandos sql disparados na aplicação
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Configuração para tratar a resposta de erro
+server.error.include-stacktrace=never
