--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #Configuração para tratar a resposta de erro
 server.error.include-stacktrace=never
+
+#Configuração para mokar a senha de login
+api.security.token.secret=${JWT_SECRET:efraim06}
