--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>API Rest d aplicação Espaço Desapego Brechó</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>20</maven.compiler.source>
+		<maven.compiler.target>20</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
