--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #configurações para a conecção com o banco de dados
 spring.datasource.url=jdbc:mysql://localhost/espaco_desapego_brecho
 spring.datasource.username=root
-spring.datasource.password=efraim06
+spring.datasource.password=admin
 
 
 #configuração para mostrar as migrations executadas na aplicação
